--- a/Lab5 Fmiranda/Lab5 Fmiranda/Lab5 Fmiranda.csproj
+++ b/Lab5 Fmiranda/Lab5 Fmiranda/Lab5 Fmiranda.csproj
@@ -51,6 +51,7 @@
     <Compile Include="RegisterEventArgs.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="SMSsender.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
